@@ -18,7 +18,7 @@
     <property name="dist" value="dist"/>
     <property name="test" value="test"/>
 
-    <property name="version" value="1.2.7"/>
+    <property name="version" value="1.2.8"/>
   </target>
 
   <target name="clean" depends="init">
